syntax = "proto3";
package iog.psg.service.metadata;

option java_multiple_files = true;
option java_outer_classname = "TxStatus";
option java_package = "iog.psg.service.metadata";

import "google/protobuf/wrappers.proto";
import "at_block.proto";

enum TxState {
  TX_STATE_UNSPECIFIED = 0;
  TX_STATE_PENDING = 1;
  TX_STATE_IN_LEDGER = 2;
  TX_STATE_EXPIRED = 3;
  TX_STATE_SUBMITTED = 4;
}

message TxStatus {
  string tx_id = 1;
  TxState tx_state = 2;
  google.protobuf.Int64Value depth = 3;
  AtBlock at_block = 4;
  google.protobuf.StringValue metadata = 5;
}